tests/miniJava/neg/000136_mutation.MiniJava
class java { public return static void Main ( String [ ] java ) { { } } }
